<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <!-- Профиль -->
        <item
            android:id="@+id/nav_profile"
            android:title="@string/My_profile" />
        <!-- Подписка -->
        <item
            android:id="@+id/nav_subscription"
            android:title="@string/Premium" />
        <!-- Тренировка -->
        <item
            android:id="@+id/nav_training"
            android:title="@string/Training" />
        <!-- Рейтинг -->
        <item
            android:id="@+id/nav_rating"
            android:title="@string/Rank" />
        <!-- Настройки -->
        <item
            android:id="@+id/nav_settings"
            android:title="@string/Settings" />
        <!-- Выход из аккаунта -->
        <item
            android:id="@+id/nav_logout"
            android:title="@string/Log_out" />
        <!-- Пригласить друзей -->
        <item
            android:id="@+id/nav_invite_friends"
            android:title="@string/Invite_friends" />
        <!-- Сообщить о проблеме -->
        <item
            android:id="@+id/nav_report_problem"
            android:title="@string/Support" />
    </group>
</menu>

