<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/main">

        <ImageButton
            android:id="@+id/ibBackBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/back_icon"
            android:background="@color/main"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registration"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="20dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Account" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PasswordConfirmation"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RegistrationBtn" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/warningText"
        android:textColor="@color/red"/>

    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AlreadyHaveAccount"/>

        <TextView
            android:id="@+id/authText"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LogIn_"
            android:textColor="@color/blue" />


    </LinearLayout>

</LinearLayout>